--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -6,6 +6,14 @@
     <title>Monitor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/public/js/app.js"></script>
+    <script src="/public/js/json-viewer.js"></script>
+    <script src="/public/js/uuid.js"></script>
+    <script src="/public/js/clipboard.min.js"></script>
+    <link href="/public/css/app.css" rel="stylesheet" type="text/css">
+    <link href="/public/css/json-viewer.css" rel="stylesheet" type="text/css">
+    <link href="/public/css/chota.min.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg"/>
 </head>
 <body>
 {{{body}}}
